# maiker-contracts

./: .cursorrules  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  TEMP.MD  package.json  pnpm-lock.yaml
.cursor/rules/: anchor-rust.mdc  anchor-typescript.mdc  anchor.mdc
cli/: README.md  index.ts
cli/commands/: createStrategy.ts  getPendingWithdrawalsForStrategy.ts  initGlobalConfig.ts  updateGlobalConfig.ts
cli/utils/: index.ts  maikerSdk.ts
clients-codama/js/: .eslintignore  package-lock.json  package.json  tsconfig.json
clients-codama/js/src/idls/: maiker_contracts.ts  test.ts
clients-codama/rust/: Cargo.toml
clients-codama/rust/dlmm/: Cargo.toml
clients/js/: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.json  README.md  package.json  tsconfig.json
clients/js/src/: constants.ts  index.ts  maiker.ts  types.ts
clients/js/src/examples/: sdk-test.ts  using-sdk.ts
clients/js/src/generated-maiker/: programId.ts
clients/js/src/helpers/: index.ts  math.ts  solana.ts
clients/js/src/meteora/: utils.ts
clients/js/src/utils/: buildTxAndCheckCu.ts  derive.ts  getOrCreateBinArrayInstruction.ts  index.ts  priorityFeeHelius.ts  priorityFeeTriton.ts
configs/: codama.cjs  validator.cjs
configs/program/: build.sh  dump.sh  test.sh
dlmm-ts-client/: package.json
dlmm-ts-client/src/dlmm/helpers/: index.ts
dlmm-ts-client/src/examples/: my-example.ts
docs/: ACCOUNTS.md  ATTACK_ANGLES.md  CALCULATIONS.md  DIAGRAMS.md  FLOW.md  MultiPositionDesign.md  PRD.md  PerformanceFee.md  README.md  TODO.md
idls/: dlmm.json
keys/: local.json
programs/maiker-contracts/: Cargo.toml
programs/maiker-contracts/src/: constants.rs  error.rs  events.rs  ids.rs  lib.rs  macros.rs
programs/maiker-contracts/src/controllers/: token.rs
programs/maiker-contracts/src/extensions/: bin_array.rs  mod.rs  position.rs
programs/maiker-contracts/src/instructions/: initialize.rs  mod.rs
programs/maiker-contracts/src/instructions/admin/: begin_swap.rs  claim_fees.rs  end_swap.rs  flash_swap.rs  mod.rs  update_global_config.rs
programs/maiker-contracts/src/instructions/cpi/: add_liquidity.rs  claim_fee.rs  close_position.rs  initialize_position.rs  mod.rs  remove_liquidity.rs  swap.rs
programs/maiker-contracts/src/instructions/user/: create_strategy.rs  deposit.rs  get_position_value.rs  initiate_withdrawal.rs  mod.rs  process_withdrawal.rs  withdraw.rs
programs/maiker-contracts/src/math/: mod.rs  price_math.rs  safe_math.rs  utils_math.rs
programs/maiker-contracts/src/state/: global_config.rs  mod.rs  pending_withdrawal.rs  strategy_config.rs  types.rs  user_position.rs
tests/: maiker-contracts.ts
(+109 files in other folders)
