[package]
name = "maiker-contracts"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "maiker_contracts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed", "event-cpi"] }
anchor-spl = { workspace = true, features = ["metadata"] }
dlmm_interface = { workspace = true }

ruint = { workspace = true }
num-traits = { workspace = true }
bytemuck = { workspace = true, features = ["min_const_generics"] }