[package]
name = "dlmm-client"
version = "1.0.0"
description = "DLMM Contract"
license-file = "../../LICENSE"
edition = "2021"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
test-sbf = []
serde = ["dep:serde", "dep:serde_with", "kaigan/serde"]

[dependencies]
borsh = ">= 0.9, < 1.0"
kaigan = ">= 0.1"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = "^1.14"
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5.0"
bytemuck = "1.14.0"
solana-program-test = "^1.17"
solana-sdk = "^1.17"
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = [
    "no-entrypoint",
] }
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
